--- a/Javascript/quiz-app/style.css
+++ b/Javascript/quiz-app/style.css
@@ -2,3 +2,10 @@
     border: 1px solid #ddd;
     padding: 5px;
 }
+
+.correct{
+    background-color: rgba(0, 128, 0, 0.672);
+}
+.incorrect{
+    background-color: rgba(255, 0, 0, 0.637);
+}
